# qmlQuarter

./: .gitignore  CMakeLists.txt  main.cpp
